wazuh/deployment-dashboard.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wazuh-dashboard
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-dashboard
  template:
    metadata:
      labels:
        app: wazuh-dashboard
    spec:
      volumes:
        - name: config
          configMap:
            name: dashboard-conf
        - name: dashboard-certs
          secret:
            secretName: dashboard-certs
      containers:
        - name: wazuh-dashboard
          image: harbor.andreybondarenko.com/dockerhub/wazuh/wazuh-dashboard:4.14.4
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /usr/share/wazuh-dashboard/config/opensearch_dashboards.yml
              subPath: opensearch_dashboards.yml
            - name: dashboard-certs
              mountPath: /usr/share/wazuh-dashboard/certs/root-ca.pem
              subPath: root-ca.pem
              readOnly: true
          ports:
            - containerPort: 5601
              name: dashboard
