wazuh/stateful-set-manager.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: wazuh-manager
  namespace: wazuh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wazuh-manager
  serviceName: wazuh-manager
  template:
    metadata:
      labels:
        app: wazuh-manager
    spec:
      securityContext:
        fsGroup: 101
      volumes:
        - name: config
          configMap:
            name: wazuh-conf
        - name: filebeat-certs
          secret:
            secretName: indexer-certs
        - name: wazuh-authd-pass
          secret:
            secretName: wazuh-authd-pass
      containers:
        - name: wazuh-manager
          image: harbor.andreybondarenko.com/dockerhub/wazuh/wazuh-manager:4.14.4
          imagePullPolicy: IfNotPresent
          securityContext:
            capabilities:
              add: ["SYS_CHROOT", "NET_BIND_SERVICE"]
          volumeMounts:
            - name: config
              mountPath: /wazuh-config-mount/etc/ossec.conf
              subPath: ossec.conf
              readOnly: true
            - name: filebeat-certs
              mountPath: /etc/ssl/root-ca.pem
              subPath: root-ca.pem
              readOnly: true
            - name: filebeat-certs
              mountPath: /etc/ssl/filebeat.pem
              subPath: filebeat.pem
              readOnly: true
            - name: filebeat-certs
              mountPath: /etc/ssl/filebeat.key
              subPath: filebeat-key.pem
              readOnly: true
            - name: wazuh-authd-pass
              mountPath: /wazuh-config-mount/etc/authd.pass
              subPath: authd.pass
              readOnly: true
            - name: wazuh-manager
              mountPath: /var/ossec/api/configuration
              subPath: wazuh/var/ossec/api/configuration
            - name: wazuh-manager
              mountPath: /var/ossec/etc
              subPath: wazuh/var/ossec/etc
            - name: wazuh-manager
              mountPath: /var/ossec/logs
              subPath: wazuh/var/ossec/logs
            - name: wazuh-manager
              mountPath: /var/ossec/queue
              subPath: wazuh/var/ossec/queue
            - name: wazuh-manager
              mountPath: /var/ossec/var/multigroups
              subPath: wazuh/var/ossec/var/multigroups
            - name: wazuh-manager
              mountPath: /var/ossec/integrations
              subPath: wazuh/var/ossec/integrations
            - name: wazuh-manager
              mountPath: /var/ossec/active-response/bin
              subPath: wazuh/var/ossec/active-response/bin
            - name: wazuh-manager
              mountPath: /var/ossec/agentless
              subPath: wazuh/var/ossec/agentless
            - name: wazuh-manager
              mountPath: /var/ossec/wodles
              subPath: wazuh/var/ossec/wodles
            - name: wazuh-manager
              mountPath: /etc/filebeat
              subPath: filebeat/etc/filebeat
            - name: wazuh-manager
              mountPath: /var/lib/filebeat
              subPath: filebeat/var/lib/filebeat
          ports:
            - containerPort: 514
              name: syslog-udp
              protocol: UDP
            - containerPort: 514
              name: syslog-tcp
              protocol: TCP
            - containerPort: 1514
              name: agents-events
            - containerPort: 1515
              name: registration
            - containerPort: 55000
              name: api
  volumeClaimTemplates:
    - metadata:
        name: wazuh-manager
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn
        resources:
          requests:
            storage: 10Gi
