wazuh/service-dashboard.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  namespace: wazuh
  labels:
    app: wazuh-dashboard
spec:
  selector:
    app: wazuh-dashboard
  ports:
    - name: dashboard
      port: 5601
      targetPort: 5601
