wazuh/service-wazuh-syslog.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wazuh-syslog
  namespace: wazuh
  labels:
    app: wazuh-manager
spec:
  type: LoadBalancer
  loadBalancerClass: metallb-l2
  loadBalancerIP: 192.168.1.211
  externalTrafficPolicy: Local
  selector:
    app: wazuh-manager
  ports:
    - name: syslog-udp
      port: 514
      targetPort: 514
      protocol: UDP
    - name: syslog-tcp
      port: 514
      targetPort: 514
      protocol: TCP
    - name: agents-events
      port: 1514
      targetPort: 1514
      protocol: TCP
    - name: registration
      port: 1515
      targetPort: 1515
      protocol: TCP
